globus-gram-job-manager-pbs (2.3-2+gt6.@distro@) @distro@; urgency=low

  * Rename dbg packages

 -- Globus Toolkit <support@globus.org>  Wed, 18 Jun 2014 14:38:43 -0400

globus-gram-job-manager-pbs (2.3-1+gt6.@distro@) @distro@; urgency=low

  * Merge changes from Mattias Ellert

 -- Globus Toolkit <support@globus.org>  Mon, 09 Jun 2014 14:39:41 -0400

globus-gram-job-manager-pbs (2.2-1+gt6.@distro@) @distro@; urgency=low

  * Version bump for consistency

 -- Globus Toolkit <support@globus.org>  Fri, 18 Apr 2014 13:47:29 -0400

globus-gram-job-manager-pbs (2.1-3+gt6.@distro@) @distro@; urgency=low

  * Version bump for consistency

 -- Globus Toolkit <support@globus.org>  Fri, 18 Apr 2014 13:39:56 -0400

globus-gram-job-manager-pbs (2.1-2+gt6.@distro@) @distro@; urgency=low

  * Packaging fixes, Warning Cleanup

 -- Globus Toolkit <support@globus.org>  Thu, 27 Feb 2014 16:48:41 -0500

globus-gram-job-manager-pbs (2.1-1+gt6.@distro@) @distro@; urgency=low

  * Add getline implementations for older or non-POSIX systems

 -- Globus Toolkit <support@globus.org>  Tue, 11 Feb 2014 11:29:03 -0500

globus-gram-job-manager-pbs (2.0-1+gt6.@distro@) @distro@; urgency=low

  * Repackage for GT6 without GPT

 -- Globus Toolkit <support@globus.org>  Thu, 23 Jan 2014 09:30:30 -0500

globus-gram-job-manager-pbs (1.6-2) unstable; urgency=low

  * Make sure globus-scheduler-event-generator-admin is installed before using it in postinst script

 -- Globus Toolkit <support@globus.org>  Thu, 25 Oct 2012 12:43:06 -0400

globus-gram-job-manager-pbs (1.6-1) unstable; urgency=low

  * GT-276: PBS SEG module isn't robust against log files becoming unavailable

 -- Globus Toolkit <support@globus.org>  Wed, 12 Sep 2012 08:42:02 -0400

globus-gram-job-manager-pbs (1.5-1) unstable; urgency=low

  * GRAM-343: lrm packages grid-service files aren't in CLEANFILES

 -- Globus Toolkit <support@globus.org>  Thu, 12 Apr 2012 10:50:30 -0500

globus-gram-job-manager-pbs (1.4-1) unstable; urgency=low
