@@ -52,17 +52,3 @@ Description: Globus Toolkit - PBS Job Manager SEG Setup
  .
  The globus-gram-job-manager-setup-pbs package contains:
  PBS Job Manager SEG Setup
-
-Package: globus-gram-job-manager-pbs-doc
-Section: doc
-Architecture: all
-Depends: globus-gram-job-manager-pbs (= ${binary:Version}), ${misc:Depends}
-Description: Globus Toolkit - PBS Job Manager Documentation Files
- The Globus Toolkit is an open source software toolkit used for
- building Grid systems and applications. It is being developed by the
- Globus Alliance and many others all over the world. A growing number
- of projects and companies are using the Globus Toolkit to unlock the
- potential of grids for their cause.
- .
- The globus-gram-job-manager-fork-doc package contains:
- PBS Job Manager Documentation Files
