@@ -119,11 +119,6 @@ install: build-stamp
 	  debian/tmp$(_docdir)/$(name)/GLOBUS_LICENSE \
 	  > debian/$(name).install
 	ls -1 \
-	  debian/tmp$(_docdir)/$(name)/html/*.* \
-	  debian/tmp$(_docdir)/$(name)/html/*/* \
-	  debian/tmp$(_mandir)/man3/*.3 \
-	  > debian/$(name)-doc.install
-	ls -1 \
 	  debian/tmp$(_sysconfdir)/grid-services/available/*poll \
 	  > debian/$(name)-setup-poll.install
 	ls -1 \
