@@ -3,7 +3,7 @@
 Name:		globus-gram-job-manager-pbs
 %global _name %(tr - _ <<< %{name})
 Version:	2.3
-Release:	1%{?dist}
+Release:	2%{?dist}
 Summary:	Globus Toolkit - PBS Job Manager
 
 Group:		Applications/Internet
@@ -42,15 +42,6 @@ BuildRequires:  libtool >= 2.2
 %endif
 BuildRequires:  pkgconfig
 
-%package doc
-Summary:	Globus Toolkit - PBS Job Manager Documentation Files
-Group:		Documentation
-%if %{?fedora}%{!?fedora:0} >= 10 || %{?rhel}%{!?rhel:0} >= 6
-BuildArch:      noarch
-%endif
-
-Requires:	%{name} = %{version}-%{release}
-
 %package setup-poll
 Summary:        Globus Toolkit - PBS Job Manager Setup Files
 Group:		Applications/Internet
@@ -84,15 +75,6 @@ using the Globus Toolkit to unlock the potential of grids for their cause.
 
 The %{name} package contains:
 PBS Job Manager 
-
-%description doc
-The Globus Toolkit is an open source software toolkit used for building Grid
-systems and applications. It is being developed by the Globus Alliance and
-many others all over the world. A growing number of projects and companies are
-using the Globus Toolkit to unlock the potential of grids for their cause.
-
-The %{name}-doc package contains:
-PBS Job Manager Documentation Files
 
 %description setup-poll
 The Globus Toolkit is an open source software toolkit used for building Grid
@@ -221,13 +203,10 @@ fi
 %{_libdir}/libglobus_*
 
 
-%files doc
-%defattr(-,root,root,-)
-%dir %{_docdir}/%{name}-%{version}/html
-%{_docdir}/%{name}-%{version}/html/*
-%{_mandir}/man3/*
-
 %changelog
+* Wed Jun 25 2014 Globus Toolkit <support@globus.org> - 2.3-2
+- Remove empty doc package
+
 * Mon Jun 09 2014 Globus Toolkit <support@globus.org> - 2.3-1
 - Merge changes from Mattias Ellert
 
