@@ -1,3 +1,9 @@
+globus-gram-job-manager-pbs (2.3-3+gt6.@distro@) @distro@; urgency=low
+
+  * Remove empty doc package
+
+ -- Globus Toolkit <support@globus.org>  Wed, 18 Jun 2014 14:38:43 -0400
+
 globus-gram-job-manager-pbs (2.3-2+gt6.@distro@) @distro@; urgency=low
 
   * Rename dbg packages
